--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
         </span>
         <div id="output"></div>
     </main>    
-    <script src="JS/script.JS"></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
